<resources>
    <string name="app_name">유카 UCA</string>

    <string name="tagKey1">tagKey1</string>
    <string name="tagKey2">tagKey2</string>

    <string name="DB_posting">posting</string>
    <string name="DB_user_posting1">post1</string>
    <string name="DB_user_posting2">post2</string>
    <string name="DB_user_posting3">post3</string>
    <string name="ST_posting">postImages</string>
    <string name="ST_userProfile">userProfiles</string>

    <string name="Dirtfy_test">Dirtfy_test</string>
    <string name="my_page_user_name_initialValue">알수없음</string>
    <string name="my_page_user_data_initialValue">0</string>
    <string name="my_page_post1_tab_name">공유</string>
    <string name="my_page_post2_tab_name">나눔</string>
    <string name="my_page_post3_tab_name">모집</string>

    <string name="activity_login_email_textView_hint">email</string>
    <string name="activity_login_password_textView_hint">password</string>
    <string name="activity_login_signUp_button_text">회원가입</string>
    <string name="activity_login_signIn_button_text">로그인</string>
    <string name="activity_login_help_password_text">비밀번호를 잊어 버리셨나요?</string>
    <string name="activity_login_login_success">로그인 성공!</string>
    <string name="activity_login_login_fail">로그인 실패...</string>

    <string name="activity_signup_name_textView_hint">이름</string>
    <string name="activity_signup_email_textView_hint">이메일</string>
    <string name="activity_signup_password_textView_hint">비밀번호(8자리 이상)</string>
    <string name="activity_signup_password_check_textView_hint">비밀번호 재확인</string>
    <string name="activity_signup_contract_text1">이용약관 보러가기</string>
    <string name="activity_signup_contract_text2">개인정보 처리방침 보러가기</string>
    <string name="activity_signup_contract_text3">위치정보 이용약관 보러가기</string>
    <string name="activity_signup_contract_url1">https://blog.naver.com/retomoo/222922382469</string>
    <string name="activity_signup_contract_url2">https://blog.naver.com/retomoo/222917513024</string>
    <string name="activity_signup_contract_url3">https://blog.naver.com/retomoo/222922384974</string>
    <string name="activity_signup_contract_agree">위 내용들을 이해하고 동의합니다</string>
    <string name="activity_signup_contract_agree_require">약관에 동의하기 바랍니다</string>
    <string name="activity_signup_signUp_button_text">회원가입</string>
    <string name="activity_signup_invalid_password">잘못된 비밀번호 입니다</string>
    <string name="activity_signup_password_is_not_same">비밀번호가 맞지 않습니다</string>
    <string name="activity_signup_create_account_success">회원가입 성공!</string>
    <string name="activity_signup_create_account_fail">회원가입 실패...</string>

    <string name="activity_setting_account_delete_button_text">계정 삭제</string>
    <string name="activity_setting_update_button_text">업데이트!</string>

    <string name="report_type1">Report &amp; Block this</string>
    <string name="report_type2">Report &amp; Block this User</string>
    <string name="activity_report_reason_1">아동학대 혹은 착취</string>
    <string name="activity_report_reason_2">음란물과 같은 성적만족을 주기 위한 콘텐츠</string>
    <string name="activity_report_reason_3">개인이나 집단에 대한 폭력이나 증오심 조장</string>
    <string name="activity_report_reason_4">폭발물, 총기 등의 제작방법 또는 준하는 행위</string>
    <string name="activity_report_reason_5">기타 사유</string>
    <string name="activity_report_reason_submit">제출</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>