<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_login_inputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/activity_login_buttonLayout">

        <EditText
            android:id="@+id/activity_login_email_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_login_email_textView_hint"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/activity_login_password_editText"/>
        <EditText
            android:id="@+id/activity_login_password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_login_password_textView_hint"
            android:inputType="numberPassword"
            app:layout_constraintTop_toBottomOf="@id/activity_login_email_editText"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <ImageView
            android:id="@+id/activity_login_password_visibility_imageView"
            android:layout_width="35dp"
            android:layout_height="0dp"
            android:src="@drawable/ic_baseline_visibility_off_24"
            android:layout_marginRight="25dp"
            android:clickable="true"
            app:layout_constraintTop_toTopOf="@id/activity_login_password_editText"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/activity_login_password_editText"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_login_buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/activity_login_inputLayout"
        app:layout_constraintBottom_toTopOf="@id/activity_login_helpLayout">

        <Button
            android:id="@+id/activity_login_signUp_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_login_signUp_button_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/activity_login_signIn_button"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <Button
            android:id="@+id/activity_login_signIn_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_login_signIn_button_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/activity_login_signUp_button"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_login_helpLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/activity_login_buttonLayout"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/activity_login_help_password_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_login_help_password_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>