<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_setting_inputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/activity_setting_buttonLayout">

        <ImageView
            android:id="@+id/activity_setting_profile_imageView"
            android:layout_width="@dimen/signup_profile_image_size"
            android:layout_height="@dimen/signup_profile_image_size"
            android:adjustViewBounds="true"
            android:layout_marginBottom="@dimen/signup_profile_bottomMargin"
            android:src="@drawable/ic_baseline_person_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/activity_setting_name_editText"/>

        <EditText
            android:id="@+id/activity_setting_name_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_signup_name_textView_hint"
            android:layout_marginBottom="@dimen/signup_name_bottomMargin"
            app:layout_constraintTop_toBottomOf="@id/activity_setting_profile_imageView"
            app:layout_constraintBottom_toTopOf="@id/activity_setting_signupDataLayout"/>

        <LinearLayout
            android:id="@+id/activity_setting_signupDataLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/activity_setting_name_editText"
            app:layout_constraintBottom_toBottomOf="parent">

            <EditText
                android:id="@+id/activity_setting_email_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_signup_email_textView_hint"/>
<!--            <EditText-->
<!--                android:id="@+id/activity_setting_password_editText"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:hint="@string/activity_signup_password_textView_hint"/>-->
<!--            <EditText-->
<!--                android:id="@+id/activity_setting_password_check_editText"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:hint="@string/activity_signup_password_check_textView_hint"/>-->
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_setting_buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/activity_setting_inputLayout"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/activity_setting_update_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_setting_update_button_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--    <androidx.constraintlayout.widget.ConstraintLayout-->
    <!--        android:id="@+id/activity_signup_helpLayout"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/activity_signup_buttonLayout"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent">-->

    <!--        <TextView-->
    <!--            android:id="@+id/activity_signup_help_password_textView"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:text="@string/activity_login_help_password_text"-->
    <!--            app:layout_constraintTop_toTopOf="parent"-->
    <!--            app:layout_constraintLeft_toLeftOf="parent"-->
    <!--            app:layout_constraintRight_toRightOf="parent"-->
    <!--            app:layout_constraintBottom_toBottomOf="parent"/>-->
    <!--    </androidx.constraintlayout.widget.ConstraintLayout>-->

</androidx.constraintlayout.widget.ConstraintLayout>